ajoute des page enfant , appart, vehicule, beauter

--- a/views/commander.ejs
+++ b/views/commander.ejs
@@ -40,13 +40,13 @@
 
         <form id="form">
             <label for="nom">Nom et prenom</label> <br>
-            <input type="text" id="nom" name="nom">
+            <input type="text" id="nom" name="nom" required>
 
             <label for="tel">Numero de telephone</label> <br>
-            <input type="tel" id="tel" name="tel" >
+            <input type="tel" id="tel" name="tel" required>
             <br>
             <label for="adresse">Adresse</label> <br>
-            <input type="text" id="adresse" name="adresse" >
+            <input type="text" id="adresse" name="adresse" required>
             <br> <br>
             <button class="Btn">
                Terminer
