--- a/views/composants/burger-menu.ejs
+++ b/views/composants/burger-menu.ejs
@@ -41,14 +41,14 @@
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
-        <div id="link" onclick="accueil()">
+        <div id="link" onclick="enfant()">
             <div class="left">
                 <i style="font-size: 1.5rem;" class="fa-solid fa-child"></i>
                 <p>Vetements enfants</p>        
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
-        <div id="link" onclick="accueil()">
+        <div id="link" onclick="beauter()">
             <div class="left">
                 <i class="fa-solid fa-wand-magic-sparkles"></i>
                 <p>Beaute</p>        
@@ -62,14 +62,14 @@
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
-        <div id="link" onclick="accueil()">
+        <div id="link" onclick="vehicule()">
             <div class="left">
                 <i class="fa-solid fa-car"></i>
                 <p>Location de vehicule</p>        
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
-        <div id="link" onclick="accueil()">
+        <div id="link" onclick="appartement()">
             <div class="left">
                 <i class="fa-solid fa-hotel"></i>
                 <p>Location d'appartement</p>        
