social media add in burger menu

--- a/views/composants/burger-menu.ejs
+++ b/views/composants/burger-menu.ejs
@@ -76,7 +76,6 @@
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
-        <hr>
         <div id="link" onclick="panier()">
             <div class="left">
                 <i class='bx bxs-shopping-bag-alt'></i>
@@ -84,7 +83,17 @@
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
-        
+        <hr>
+        <br> <br> <br>
+        <div style="font-size: 1.5rem;display: flex; align-items: center; justify-content: space-around; ">
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-tiktok"></i>
+            <i class="fa-brands fa-facebook"></i>
+        </div><br> <br> <br>
+        <h6 style="font-size: 0.7rem; text-align: center;">Copyright © 2023 LafyShop
+            Powered by Privat's labs</h6>
+
         <br> <br> <br> <br>
     </div>
 </div>
