--- a/views/commander.ejs
+++ b/views/commander.ejs
@@ -57,6 +57,9 @@
               </button>
 
         </form>
+        <br> <br> <br>
+        <h6 style="font-size: 0.7rem; text-align: center;">Copyright © 2023 LafyShop
+            Powered by Privat's labs</h6>
 
 
     </div>
