--- a/views/composants/footer.ejs
+++ b/views/composants/footer.ejs
@@ -57,6 +57,6 @@
     </div>
 
     <div class="text-center mt-5">
-        <p class="footer-alt mb-0 f-14">2023 © Lafyshop, All Rights Reserved</p>
+        <p class="footer-alt mb-0 f-14">2023 © Lafyshop, by Privat's labs</p>
     </div>
 </footer>
