--- a/views/commander.ejs
+++ b/views/commander.ejs
@@ -35,7 +35,9 @@
 
     <div class="main">
         <h1>Effectuez vos achats</h1> <br>
-        <p>Pour finaliser votre commande en toute simplicité, nous avons besoin de quelques informations essentielles. Ces détails nous permettront de traiter votre commande avec soin et de vous assurer une expérience d'achat optimale .</p>
+        <p>Pour finaliser votre commande en toute simplicité, nous avons besoin de quelques informations essentielles.
+            Ces détails nous permettront de traiter votre commande avec soin et de vous assurer une expérience d'achat
+            optimale .</p>
         <br>
 
         <form id="form">
@@ -49,12 +51,10 @@
             <input type="text" id="adresse" name="adresse" required>
             <br> <br>
             <button class="Btn">
-               Terminer
+                Terminer
 
-              
-              
-                 <svg class="svgIcon" viewBox="0 0 576 512"><path d="M512 80c8.8 0 16 7.2 16 16v32H48V96c0-8.8 7.2-16 16-16H512zm16 144V416c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V224H528zM64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H512c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zm56 304c-13.3 0-24 10.7-24 24s10.7 24 24 24h48c13.3 0 24-10.7 24-24s-10.7-24-24-24H120zm128 0c-13.3 0-24 10.7-24 24s10.7 24 24 24H360c13.3 0 24-10.7 24-24s-10.7-24-24-24H248z"></path></svg>
-              </button>
+                <!-- <svg class="svgIcon" viewBox="0 0 576 512"><path d="M512 80c8.8 0 16 7.2 16 16v32H48V96c0-8.8 7.2-16 16-16H512zm16 144V416c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V224H528zM64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H512c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zm56 304c-13.3 0-24 10.7-24 24s10.7 24 24 24h48c13.3 0 24-10.7 24-24s-10.7-24-24-24H120zm128 0c-13.3 0-24 10.7-24 24s10.7 24 24 24H360c13.3 0 24-10.7 24-24s-10.7-24-24-24H248z"></path></svg> -->
+            </button>
 
         </form>
         <br> <br> <br>
@@ -74,13 +74,13 @@
 
 
 
-        <!-- boostrap here -->
+    <!-- boostrap here -->
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
-        <script src="/script/index.js"></script>
+    <script src="/script/index.js"></script>
 
 </body>
 
