changements de l affiche

--- a/views/composants/burger-menu.ejs
+++ b/views/composants/burger-menu.ejs
@@ -2,9 +2,7 @@
     <i onclick="icon_x()" id="x" style="margin-left: 85%; margin-top: 8px; font-size: 3rem;" class='bx bx-x'></i>
     <div id="menu-link">
         <div id="affiche">
-            <p><strong>PROMO : -20 %</strong><br> EN PLUS
-            <br><strong>UTILISE LE CODE :</strong><br>
-                SZNL</p>
+            <span style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Commandez maintenant et payez à la livraison . </span >
         </div> <br>
         <div id="link" onclick="accueil()">
             <div class="left">
