--- a/public/css/style.css
+++ b/public/css/style.css
@@ -231,11 +231,15 @@ nav #bx-search{
  }
 
  .burger-nav #affiche {
-    background-image: linear-gradient(to left, rgb(166, 255, 0), rgb(29, 222, 141));
+    height: auto;
+    
+    margin-top: 5px;
+    background-color: #0f68c1;
+    padding: 10px 0px 10px 0px;
+    font-weight: bolder;
+    font-size: 0.9rem !important;
+    text-align: center;
     color: white;
-    padding: 5px;
-    font-size: 0.8rem;
-    height: 100px;
  }
  .burger-nav #link{
    display: flex;
@@ -359,10 +363,10 @@ nav #bx-search{
  /* la promo ici  */
 body .promo {
     margin-top: 110px;
-    background-image: linear-gradient(to left, rgb(166, 255, 0), rgb(29, 222, 141));
+    background-color: #0f68c1;
     padding: 10px 0px 10px 0px;
     font-weight: bolder;
-    font-size: 0.9rem;
+    font-size: 0.9rem !important;
     text-align: center;
     color: white;
 }
