--- a/views/composants/promo.ejs
+++ b/views/composants/promo.ejs
@@ -1,3 +1,3 @@
 <div class="promo">
-    <h3>-20 % SUR TOUT NOS ARTICLES </h3>
+    <span style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Commandez maintenant et payez à la livraison . </span >
 </div>
