boucler des carteVisiter depuis ma bd

--- a/views/composants/slider-visiter.ejs
+++ b/views/composants/slider-visiter.ejs
@@ -1,209 +1,9 @@
-<div class="slider-container">
+<div class="slider-containerVisiter">
     <h3 style="text-align: start; margin-left: 10px;">Articles visiter</h3>
-    <div class="slider">
-        <div class="article-carte">
-            <img src="/img/phone.jpg" alt="Nom de l'article">
-            <br>
-            <p style="text-align: start;">Iphone 12 simple</br>-
-                <span>Rouge 250G.</span>
-            <div class="prix">
-                <span class="prix-actuel"
-                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
-                    CFA</span>
-            </div>
-            <button>Ajouter</button>
-        </div>
-        <div class=" article-carte">
-            <img src="/img/mode.jpg" alt="Nom de l'article">
-            <br>
-            <p style="text-align: start;">Iphone 12 simple</br>-
-                <span>Rouge 250G.</span>
-            <div class="prix">
-                <span class="prix-actuel"
-                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
-                    CFA</span>
-            </div>
-            <button>Ajouter</button>
-        </div>
-        <div class=" article-carte">
-            <img src="/img/canaper.jpg" alt="Nom de l'article">
-            <br>
-            <p style="text-align: start;">Iphone 12 simple</br>-
-                <span>Rouge 250G.</span>
-            <div class="prix">
-                <span class="prix-actuel"
-                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
-                    CFA</span>
-            </div>
-            <button>Ajouter</button>
-        </div>
-        <div class=" article-carte">
-            <img src="/img/frigo.jpg" alt="Nom de l'article">
-            <br>
-            <p style="text-align: start;">Iphone 12 simple</br>-
-                <span>Rouge 250G.</span>
-            <div class="prix">
-                <span class="prix-actuel"
-                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
-                    CFA</span>
-            </div>
-            <button>Ajouter</button>
-        </div>
-        <div class="article-carte">
-            <img src="/img/phone.jpg" alt="Nom de l'article">
-            <br>
-            <p style="text-align: start;">Iphone 12 simple</br>-
-                <span>Rouge 250G.</span>
-            <div class="prix">
-                <span class="prix-actuel"
-                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
-                    CFA</span>
-            </div>
-            <button>Ajouter</button>
-        </div>
-        <div class=" article-carte">
-            <img src="/img/mode.jpg" alt="Nom de l'article">
-            <br>
-            <p style="text-align: start;">Iphone 12 simple</br>-
-                <span>Rouge 250G.</span>
-            <div class="prix">
-                <span class="prix-actuel"
-                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
-                    CFA</span>
-            </div>
-            <button>Ajouter</button>
-        </div>
-        <div class=" article-carte">
-            <img src="/img/canaper.jpg" alt="Nom de l'article">
-            <br>
-            <p style="text-align: start;">Iphone 12 simple</br>-
-                <span>Rouge 250G.</span>
-            <div class="prix">
-                <span class="prix-actuel"
-                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
-                    CFA</span>
-            </div>
-            <button>Ajouter</button>
-        </div>
-        <div class=" article-carte">
-            <img src="/img/frigo.jpg" alt="Nom de l'article">
-            <br>
-            <p style="text-align: start;">Iphone 12 simple</br>-
-                <span>Rouge 250G.</span>
-            <div class="prix">
-                <span class="prix-actuel"
-                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
-                    CFA</span>
-            </div>
-            <button>Ajouter</button>
-        </div>
-        <div class="article-carte">
-            <img src="/img/phone.jpg" alt="Nom de l'article">
-            <br>
-            <p style="text-align: start;">Iphone 12 simple</br>-
-                <span>Rouge 250G.</span>
-            <div class="prix">
-                <span class="prix-actuel"
-                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
-                    CFA</span>
-            </div>
-            <button>Ajouter</button>
-        </div>
-        <div class=" article-carte">
-            <img src="/img/mode.jpg" alt="Nom de l'article">
-            <br>
-            <p style="text-align: start;">Iphone 12 simple</br>-
-                <span>Rouge 250G.</span>
-            <div class="prix">
-                <span class="prix-actuel"
-                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
-                    CFA</span>
-            </div>
-            <button>Ajouter</button>
-        </div>
-        <div class=" article-carte">
-            <img src="/img/canaper.jpg" alt="Nom de l'article">
-            <br>
-            <p style="text-align: start;">Iphone 12 simple</br>-
-                <span>Rouge 250G.</span>
-            <div class="prix">
-                <span class="prix-actuel"
-                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
-                    CFA</span>
-            </div>
-            <button>Ajouter</button>
-        </div>
-        <div class=" article-carte">
-            <img src="/img/frigo.jpg" alt="Nom de l'article">
-            <br>
-            <p style="text-align: start;">Iphone 12 simple</br>-
-                <span>Rouge 250G.</span>
-            <div class="prix">
-                <span class="prix-actuel"
-                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
-                    CFA</span>
-            </div>
-            <button>Ajouter</button>
-        </div>
-        <div class="article-carte">
-            <img src="/img/phone.jpg" alt="Nom de l'article">
-            <br>
-            <p style="text-align: start;">Iphone 12 simple</br>-
-                <span>Rouge 250G.</span>
-            <div class="prix">
-                <span class="prix-actuel"
-                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
-                    CFA</span>
-            </div>
-            <button>Ajouter</button>
-        </div>
-        <div class=" article-carte">
-            <img src="/img/mode.jpg" alt="Nom de l'article">
-            <br>
-            <p style="text-align: start;">Iphone 12 simple</br>-
-                <span>Rouge 250G.</span>
-            <div class="prix">
-                <span class="prix-actuel"
-                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
-                    CFA</span>
-            </div>
-            <button>Ajouter</button>
-        </div>
-        <div class=" article-carte">
-            <img src="/img/canaper.jpg" alt="Nom de l'article">
-            <br>
-            <p style="text-align: start;">Iphone 12 simple</br>-
-                <span>Rouge 250G.</span>
-            <div class="prix">
-                <span class="prix-actuel"
-                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
-                    CFA</span>
-            </div>
-            <button>Ajouter</button>
-        </div>
-        <div class=" article-carte">
-            <img src="/img/frigo.jpg" alt="Nom de l'article">
-            <br>
-            <p style="text-align: start;">Iphone 12 simple</br>-
-                <span>Rouge 250G.</span>
-            <div class="prix">
-                <span class="prix-actuel"
-                    style="color: #293847; font-weight: bolder; font-size: 1.2rem;">250.999
-                    CFA</span>
-            </div>
-            <button>Ajouter</button>
-        </div>
-        <div class=" article-carte">
-            <img src="/img/phone.jpg" alt="Nom de l'article">
-            <br>
-            <p style="text-align: start;">Iphone 12 simple</br>-
-                <span>Rouge 250G.</span>
-            <div class="prix">
-                <span class="prix-actuel"
-                    style="color: #A60303; font-weight: bolder; font-size: 1.2rem;">250.999
-                    CFA</span>
-            </div>
-            <button>Ajouter</button>
-        </div>
+    <div class="sliderVisiter">
+
+
+        
+        
     </div>
 </div>
