--- a/public/css/style.css
+++ b/public/css/style.css
@@ -377,9 +377,7 @@ body .promo {
   background-color: rgba(240, 255, 255, 0.485);
 
   } */
-  .slider-container{
-    margin-bottom: 18px;
-  }
+ 
   .nav-bar-card{
     /* border-radius: 15px !important;
     height: 210px;
@@ -405,6 +403,10 @@ body .promo {
   .nav-bar-card p{
     font-size: 0.9rem;
   }
+
+  .slider-container{
+    margin-bottom: 18px;
+  }
   #slider {
     display: flex;
     transition: transform 0.5s ease-in-out;
@@ -420,6 +422,35 @@ body .promo {
   background-color: white;
  }
 .slider .carte-bottom{
+ height: 150px;
+ width: 100%;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+
+}
+.carte-bottom img{
+  object-fit: cover;
+  width: 100px;
+}
+  .slider-containerVisiter{
+    margin-bottom: 18px;
+  }
+  .sliderVisiter {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+    max-width: 99%;
+    overflow-x: scroll;
+    white-space: nowrap
+
+ }
+
+ .sliderVisiter .carte-top{
+  padding: 5px;
+  height: 50px;
+  background-color: white;
+ }
+.carte-bottom{
  height: 150px;
  width: 100%;
  display: flex;
