--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,111 +2,164 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <!-- <meta http-equiv="refresh" content="2"> -->
-    <meta name="theme-color" content="#293847">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-   
-    <!-- awesome cdn  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-   
-    <!-- box icon here  -->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
-    <!-- boostrap here -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <!-- <meta http-equiv="refresh" content="2"> -->
+  <meta name="theme-color" content="#293847">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 
-    <!-- mon css here -->
-    <link rel="stylesheet" href="/css/style.css">
-    <title>Accueil</title>
+  <!-- awesome cdn  -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <!-- box icon here  -->
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+  <!-- boostrap here -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+
+  <!-- mon css here -->
+  <link rel="stylesheet" href="/css/style.css">
+  <title>Accueil</title>
 </head>
 
 <body id="body">
 
-    <%- include('composants/nav.ejs') %>
+  <%- include('composants/nav.ejs') %>
 
-        <%- include('composants/promo.ejs') %> <br>
-            <%- include('composants/burger-menu.ejs') %>
-            <%- include('composants/panier.ejs') %>
-                <%- include('composants/tab-bar.ejs') %> 
-                <%- include('composants/coupon.ejs') %> <br>
-
-
-                    <!-- mon slider visiter  -->
-                    <%- include('composants/slider-visiter.ejs') %> <br>
-                    <!-- mon slider visiter  -->
-
-                    
-                   <!-- offres special -->
-                   <%- include('composants/offre-special.ejs') %> <br>
-                   <!-- offres special -->
-                  
-                    <br> <br> <br> <br>
-                    <!-- mon slider  telephones -->
-                    <%- include('composants/slider-telephones.ejs') %> <br>
-                    <!-- mon slider telephones -->
-                    <br> <br>
-
-                   <!-- cool card -->
-                   <%- include('composants/cool-card.ejs') %> <br> <br>
-
-                   <!-- cool card -->
-
-                   <!-- deux carte -->
-                   <%- include('composants/deux-card.ejs') %> <br>
-
-                   <!-- deux carte -->
+  <%- include('composants/promo.ejs') %> <br>
+  <%- include('composants/burger-menu.ejs') %>
+  <%- include('composants/panier.ejs') %>
+  <%- include('composants/tab-bar.ejs') %>
+  <%- include('composants/coupon.ejs') %> <br>
 
 
-                   <br>
-                   <!-- grosse carte  -->
-                   <%- include('composants/grosse-card.ejs') %> <br>
-
-                   <!-- grosse cart -->
-                   <br>
-                   <br>
-                   <!-- mode slider  -->
-                   <%- include('composants/slider-mode.ejs') %> <br>
-
-                   <!-- mode slider -->
-                   <br>
-                   <br>
-                   <!-- electro slider  -->
-                   <%- include('composants/slider-electro.ejs') %> <br>
-
-                   <!-- electro slider -->
-                   <br>
-                     <!-- deux carte -->
-                     <%- include('composants/deux-card.ejs') %> <br>
-
-                     <!-- deux carte -->
+  <!-- mon slider visiter  -->
+  <%- include('composants/slider-visiter.ejs') %> <br>
+  <!-- mon slider visiter  -->
 
 
-                    <div class="app-pub">
-                        <button>L'APPLI Lafyshop</button> <br>
-                        <p style="text-align: center;">Hey , tu veux shopper easy ?</br>
-                            Retriuve des selecs creees juste pour toi</p> <br>
-                        <input type="submit" value="TELECHARGER MAINTENANT"><br>
-                    </div>
+  <!-- offres special -->
+  <%- include('composants/offre-special.ejs') %> <br>
+  <!-- offres special -->
 
-                    <!-- FOOTER ICI  -->
-                    <%- include('composants/footer.ejs') %>
-                    <!-- FOOTER ICI  -->
+  <br> <br> <br> <br>
+  <!-- mon slider  telephones -->
+  <%- include('composants/slider-telephones.ejs') %> <br>
+  <!-- mon slider telephones -->
+  <br> <br>
+
+  <!-- cool card -->
+  <%- include('composants/cool-card.ejs') %> <br> <br>
+
+  <!-- cool card -->
+
+  <!-- deux carte -->
+  <%- include('composants/deux-card.ejs') %> <br>
+
+  <!-- deux carte -->
+
+
+  <br>
+  <!-- grosse carte  -->
+  <%- include('composants/grosse-card.ejs') %> <br>
+
+  <!-- grosse cart -->
+  <br>
+  <br>
+  <!-- mode slider  -->
+  <%- include('composants/slider-mode.ejs') %> <br>
+
+  <!-- mode slider -->
+  <br>
+  <br>
+  <!-- electro slider  -->
+  <%- include('composants/slider-electro.ejs') %> <br>
+
+  <!-- electro slider -->
+  <br>
+  <!-- deux carte -->
+  <%- include('composants/deux-card.ejs') %> <br>
+
+  <!-- deux carte -->
+
+
+  <div class="app-pub">
+    <button>L'APPLI Lafyshop</button> <br>
+    <p style="text-align: center;">Hey , tu veux shopper
+      easy ?</br>
+      Retriuve des selecs creees juste pour toi</p>
+    <br>
+    <input type="submit" value="TELECHARGER MAINTENANT"><br>
+  </div>
+
+  <!-- FOOTER ICI  -->
+  <%- include('composants/footer.ejs') %>
+  <!-- FOOTER ICI  -->
 
 
 
-                        <!-- boostrap here -->
+  <!-- boostrap here -->
 
-                        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-                            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-                            crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-                        <script src="/script/index.js"></script>
+  <script src="/script/index.js"></script>
+
 
 </body>
+<script>
+// Attendez que le DOM soit chargé avant d'exécuter du code JavaScript
+document.addEventListener('DOMContentLoaded', function () {
+  // 1. Récupérez les données depuis le serveur et stockez-les dans le localStorage
+  fetch('/recupererDonnees')
+    .then(response => {
+      if (!response.ok) {
+        throw new Error('La réponse du serveur n\'est pas OK');
+      }
+      return response.json();
+    })
+    .then(data => {
+      localStorage.setItem('articlesVisiter', JSON.stringify(data));
+      console.log(data);
+      // 2. Une fois les données récupérées, bouclez dans votre slider
+      populateSlider();
+    })
+    .catch(error => console.error('Erreur lors de la récupération des données : ' + error));
 
+  // 3. Créez une fonction pour boucler dans le slider
+  function populateSlider() {
+    // Récupérer les données d'articles visités depuis le localStorage
+    const articlesVisites = JSON.parse(localStorage.getItem('articlesVisiter'));
+
+    // Vérifiez si des articles visités existent
+    if (articlesVisites && articlesVisites.length > 0) {
+      // Sélectionnez l'élément parent où vous souhaitez ajouter les articles
+      const slider = document.querySelector('.sliderVisiter');
+
+      // Bouclez sur les articles et générez dynamiquement les éléments HTML
+      articlesVisites.forEach((article) => {
+        const articleCarte = document.createElement('div');
+        articleCarte.classList.add('article-carte');
+
+        // Vous pouvez personnaliser le contenu de chaque article en fonction des données
+        articleCarte.innerHTML = `
+          <img src="${article.url}" alt="${article.nom}">
+          <br>
+          <p style="text-align: start;">${article.nom}<br>-
+            <span>${article.details}</span>
+          </p>
+          <div class="prix">
+            <span class="prix-actuel" style="color: #293847; font-weight: bolder; font-size: 1.2rem;">${article.prix} CFA</span>
+          </div>
+          <button>Ajouter</button>
+        `;
+
+        slider.appendChild(articleCarte);
+      });
+    }
+  }
+});
+
+  </script>
 </html>
