--- a/public/css/style.css
+++ b/public/css/style.css
@@ -592,6 +592,8 @@ body .promo {
   border-radius: 11px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 40px;
+  box-shadow: 0 3px 5px rgba(125, 125, 125, 0.2);
 
 }
 .offre-special .offre-img{
