ajoute des liens dans  tab & modif outhor

--- a/views/composants/tab-bar.ejs
+++ b/views/composants/tab-bar.ejs
@@ -1,7 +1,7 @@
 <div class="slider-container nav-bar">
     <h3 style="text-align: start; margin-left: 10px;">Nos categories</h3>
     <div class="slider" id="slider">
-        <div class="nav-bar-card shadow-sm">
+        <div class="nav-bar-card shadow-sm" onclick="maison()"> 
             <div class="carte-top">
                 <p>Meubles et <br>
                     deco
@@ -11,7 +11,7 @@
                 <img src="/img/canaper.jpg" alt="">
             </div>
         </div>
-        <div class="nav-bar-card shadow-sm">
+        <div class="nav-bar-card shadow-sm" onclick="beauter()">
             <div class="carte-top">
                 <p>Beauté <br>
                 </p>
@@ -20,7 +20,7 @@
                 <img src="/img/beauter.jpg" alt="">
             </div>
         </div>
-        <div class="nav-bar-card shadow-sm">
+        <div class="nav-bar-card shadow-sm" onclick="montres()">
             <div class="carte-top">
                 <p>Bijoux et <br> montre <br>
                 </p>
@@ -58,7 +58,7 @@
             </div>
         </div>
        
-        <div class="nav-bar-card shadow-sm">
+        <div class="nav-bar-card shadow-sm"  onclick="habitsF()">
             <div class="carte-top">
                 <p>Vêtements et <br>
                     chaussures Femme 
@@ -69,7 +69,7 @@
 
             </div>
         </div>
-        <div class="nav-bar-card shadow-sm">
+        <div class="nav-bar-card shadow-sm"  onclick="habitsH()">
             <div class="carte-top">
                 <p>Vêtements et <br>
                     chaussures Homme 
@@ -80,7 +80,7 @@
 
             </div>
         </div>
-        <div class="nav-bar-card shadow-sm">
+        <div class="nav-bar-card shadow-sm" onclick="enfant()">
             <div class="carte-top">
                 <p>Vêtements <br>
                     enfants
