finalisation de l items electro-manager

--- a/views/composants/burger-menu.ejs
+++ b/views/composants/burger-menu.ejs
@@ -60,6 +60,13 @@
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
+        <div id="link" onclick="electroMenager()">
+            <div class="left">
+                <i class="fa-solid fa-blender"></i>
+                <p>Electro-menager</p>        
+            </div>
+            <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
+        </div> <br>
         <div id="link" onclick="vehicule()">
             <div class="left">
                 <i class="fa-solid fa-car"></i>
