--- a/views/composants/burger-menu.ejs
+++ b/views/composants/burger-menu.ejs
@@ -67,6 +67,13 @@
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
+        <div id="link" onclick="chichaStore()">
+            <div class="left">
+                <i class="fa-solid fa-joint"></i>
+                <p>Chicha store</p>        
+            </div>
+            <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
+        </div> <br>
         <div id="link" onclick="vehicule()">
             <div class="left">
                 <i class="fa-solid fa-car"></i>
