--- a/views/chichaStore.ejs
+++ b/views/chichaStore.ejs
@@ -42,7 +42,7 @@
             <!-- les carte categories  -->
             <div class="categories row">
                 <div class="col-6">
-                    <div class="carte shadow-sm" onclick="iphone()">
+                    <div class="carte shadow-sm" onclick="chicha()">
                         <div class="carte-top"> 
                             <img src="./img/xr.jpg" width="75" alt="">
                         </div>
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <div class="carte shadow-sm" onclick="samsung()">
+                    <div class="carte shadow-sm" onclick="puff()">
                         <div class="carte-top">
                             <img src="./img/s22.jpg" width="75" alt="">
                         </div>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <div class="carte shadow-sm" onclick="oppo()">
+                    <div class="carte shadow-sm" onclick="charbon()">
                         <div class="carte-top">
                             <img src="./img/oppo.jpg" width="75" alt="">
                         </div>
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <div class="carte shadow-sm" onclick="redmi()">
+                    <div class="carte shadow-sm" onclick="arome()">
                         <div class="carte-top">
                             <img src="./img/xiomi.jpg" width="75" alt="">
                         </div>
