#affichage update in all my css

--- a/public/css/montresCopage.css
+++ b/public/css/montresCopage.css
@@ -230,12 +230,15 @@ transition: 0s;
  }
 
  .burger-nav #affiche {
-    background-image: linear-gradient(to left, rgb(166, 255, 0), rgb(29, 222, 141));
-    color: white;
-    padding: 5px;
-    font-size: 0.8rem;
-    height: 100px;
- }
+  height: auto;
+  margin-top: 5px;
+  background-color: #0f68c1;
+  padding: 10px 0px 10px 0px;
+  font-weight: bolder;
+  font-size: 0.9rem !important;
+  text-align: center;
+  color: white;
+}
  .burger-nav #link{
    display: flex;
    justify-content: space-between;
