--- a/views/commander.ejs
+++ b/views/commander.ejs
@@ -59,7 +59,7 @@
         </form>
         <br> <br> <br>
         <h6 style="font-size: 0.7rem; text-align: center;">Copyright © 2023 LafyShop
-            Powered by Privat's labs</h6>
+            Powered by <strong>Privat's labs</strong></h6>
 
 
     </div>
