--- a/views/composants/burger-menu.ejs
+++ b/views/composants/burger-menu.ejs
@@ -6,12 +6,12 @@
         </div> <br>
         <div id="link" onclick="accueil()">
             <div class="left">
-                <i style="font-size: 1.5rem;" class='bx bx-home'></i>
+                <i style="font-size: 1.1rem;" class='fa-solid fa-house'></i>
                 <p>Accueil</p>        
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
-        <div id="link" onclick="phone()">
+        <div id="link" onclick="phone()" >
             <div class="left">
                 <i class="fa-solid fa-mobile"></i>
                 <p>Telephone & Pc</p>        
@@ -20,14 +20,13 @@
         </div> <br>
         <div id="link" onclick="montres()">
             <div class="left">
-                <i style="font-size: 1.7rem; margin-left: 0px;" class='bx bxs-watch-alt'></i>
-                <p>Montres & Bijoux</p>        
+                <i class="fa-brands fa-watchman-monitoring"></i>                <p>Montres & Bijoux</p>        
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
         <div id="link" onclick="habitsH()">
             <div class="left">
-                <i style="font-size: 1.1rem;" class="fa-solid fa-shirt"></i>
+                <i style="font-size: 1rem;" class="fa-solid fa-shirt"></i>
                 <p>Vetements hommes</p>        
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
@@ -104,7 +103,7 @@
             <i class="fa-brands fa-facebook"></i>
         </div><br> <br> <br>
         <h6 style="font-size: 0.7rem; text-align: center;">Copyright © 2023 LafyShop
-            Powered by Privat's labs</h6>
+            Powered by <strong>Privat's labs</strong></h6>
 
         <br> <br> <br> <br>
     </div>
