--- a/views/valider.ejs
+++ b/views/valider.ejs
@@ -47,7 +47,7 @@
             <button class="btn btn-primary">Retourner sur la page d'accueil</button>
             <br> <br> <br>
             <h6 style="font-size: 0.7rem; text-align: center;">Copyright © 2023 LafyShop
-                Powered by Privat's labs</h6>
+                Powered by <strong>Privat's labs</strong></h6>
 
     </div>
 
