--- a/views/composants/cool-card.ejs
+++ b/views/composants/cool-card.ejs
@@ -1,4 +1,4 @@
-<div class="cool-card">
+<div class="cool-card" >
     <div class="card">
         <span></span>
         <span></span>
@@ -12,8 +12,8 @@
           <strong>Vetements</strong>
           <p>Notre selections de vetements hommes et femmes est fait pour rendre plus styler avec moins effot · </p>
           <hr>
-          <button>
-            Visiter 
+          <button type="button" onclick="habitsH()">
+            Visiter > > >
             <svg class="arrow" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
             <path d="M470.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 256 265.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160zm-352 160l160-160c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L210.7 256 73.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0z"></path>
             </svg>
