--- a/views/appartement.ejs
+++ b/views/appartement.ejs
@@ -21,8 +21,8 @@
 
 
     <!-- mon css here -->
-    <link rel="stylesheet" href="/css/meublePage.css">
-    <title>Meuble </title>
+    <link rel="stylesheet" href="/css/appart.css">
+    <title>Appartement</title>
 </head>
 
 <body id="body">
