--- a/public/css/outfitHPage.css
+++ b/public/css/outfitHPage.css
@@ -275,7 +275,7 @@ margin-right: 20px;
     position: fixed;
     top: 0;
     left: 0;
-    transition: 0.4s ease-in;
+    transition: 0.3s ease-in-out;
     overflow-y: auto; /* Permet le défilement vertical lorsque le contenu dépasse la hauteur maximale */
   }
 
@@ -333,7 +333,7 @@ margin-right: 20px;
   right: 0;
   overflow-y: auto;
   max-height: 100vh;
-  transition: 0.5s ease-in;
+  transition: 0.3s ease-in-out;
   padding-bottom: 90px; /* Ajoutez une marge inférieure pour .panier-footer */
   
 }
